IGNITE-15371 Switch to Google code style. Fixes #377
Signed-off-by: Slava Koptilin <slava.koptilin@gmail.com>